--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "cheerio": "^0.22.0",
     "cookie-parser": "~1.4.3",
     "debug": "~2.2.0",
+    "eventproxy": "^0.3.5",
     "express": "~4.14.0",
     "iconv-lite": "^0.4.15",
     "jade": "~1.11.0",
