--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "async": "^2.1.4",
     "body-parser": "~1.15.2",
     "cheerio": "^0.22.0",
-    "cookie-parser": "~1.4.3",
+    "cookie-parser": "^1.4.3",
     "debug": "~2.2.0",
     "eventproxy": "^0.3.5",
     "express": "~4.14.0",
