--- a/package.json
+++ b/package.json
@@ -20,7 +20,8 @@
     "pm2": "^2.2.2",
     "serve-favicon": "~2.3.0",
     "superagent": "^3.3.0",
-    "superagent-charset": "^1.1.1"
+    "superagent-charset": "^1.1.1",
+    "validator": "^6.2.0"
   },
   "description": "HPU二狗后端",
   "main": "app.js",
