--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
   },
   "dependencies": {
     "async": "^2.1.4",
+    "bcrypt": "^1.0.1",
     "body-parser": "~1.15.2",
     "cheerio": "^0.22.0",
     "cookie-parser": "^1.4.3",
