--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "express": "~4.14.0",
     "iconv-lite": "^0.4.15",
     "jade": "~1.11.0",
+    "jsonwebtoken": "^7.2.1",
     "mongoose": "^4.7.3",
     "morgan": "~1.7.0",
     "pm2": "^2.2.2",
