--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
   "dependencies": {
     "async": "^2.1.4",
     "bcrypt": "^1.0.1",
+    "bluebird": "^3.4.7",
     "body-parser": "~1.15.2",
     "cheerio": "^0.22.0",
     "cookie-parser": "^1.4.3",
