--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "mongoose": "^4.7.3",
     "morgan": "~1.7.0",
     "pm2": "^2.2.2",
+    "rsa-node": "^0.1.1",
     "serve-favicon": "~2.3.0",
     "superagent": "^3.3.0",
     "superagent-charset": "^1.1.1",
